--- a/hush/src/main/webapp/style.css
+++ b/hush/src/main/webapp/style.css
@@ -59,6 +59,15 @@ p,h1,form,button {
 	width: 140px;
 }
 
+#stylized .error {
+	color: #ff0000;
+	display: block;
+	font-size: 11px;
+	font-weight: normal;
+	text-align: right;
+	width: 140px;
+}
+
 #stylized input {
 	float: left;
 	font-size: 12px;
