--- a/hush/src/main/webapp/style.css
+++ b/hush/src/main/webapp/style.css
@@ -9,6 +9,14 @@ body {
 	margin: 10px;
 }
 
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 p,h1,form,button {
 	border: 0;
 	margin-bottom: 15px;
@@ -48,10 +56,6 @@ p,h1,form,button {
 #header span {
 	padding-right: 10px;
 	vertical-align: middle;
-}
-
-#header a {
-	text-decoration: none;
 }
 
 #footer {
@@ -145,10 +149,25 @@ p,h1,form,button {
 }
 
 /* ----------- Tables ----------- */
+table {
+	border: solid 1px #aacfe4;
+	border-spacing: 0;
+}
+
+thead td {
+	background-color: #aacfe4;
+	color: white;
+	padding: 5px;
+}
+
+tbody td {
+	border-top: solid 1px #aacfe4;
+	padding: 5px;
+	margin: 0;
+}
+
 #domains td {
 	vertical-align: top;
-	padding: 10px;
-	margin: 0px;
 }
 
 #domains ul {
@@ -157,22 +176,14 @@ p,h1,form,button {
 	padding: 0;
 }
 
-#domains span {
-	display: block;
+td.shortDomain {
+	width: 200px;
 }
 
-.shortDomain {
-	width: 100px;
-}
-
-.shortDomainActions {
-	width: 50px;
-}
-
-.longDomain {
+td.longDomain {
 	width: 400px;
 }
 
-.longDomainActions {
-	width: 50px;
+td.action {
+	width: 100px;
 }
