Separate login page to fix the new user registration flow. Refactored JSPs to move hbase calls to UserManager

--- a/hush/src/main/webapp/style.css
+++ b/hush/src/main/webapp/style.css
@@ -6,7 +6,9 @@ body {
 }
 
 .main {
-	margin: 10px;
+	margin-top: 10px;
+	margin-right: 10px;
+	margin-left: 150px;
 }
 
 a {
@@ -69,7 +71,6 @@ p,h1,form,button {
 
 /* ----------- Error ----------- */
 #error {
-	text-align: center;
 	color: red;
 }
 
