Now saving anonymous user ids. Some CSS tweaks.

--- a/hush/src/main/webapp/style.css
+++ b/hush/src/main/webapp/style.css
@@ -257,3 +257,19 @@ td {
 #users td.action {
 	width: 100px;
 }
+
+#userstats td.rowNum {
+	width: 20px;
+}
+
+#userstats td.shortUrl {
+	width: 100px;
+}
+
+#userstats td.longUrl {
+	width: 300px;
+}
+
+#userstats td.trend {
+	width: 200px;
+}
