--- a/cluster/ansible/roles/common/templates/etc/opt/hbase/conf/backup-masters.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hbase/conf/backup-masters.j2
@@ -1,3 +1,3 @@
-{%- for host in groups.hbase-backup-masters -%}
+{%- for host in groups.hbase_backup_masters %}
 {{ host }}
-{%- endfor -%}
+{% endfor -%}
