Added Phoenix settings

--- a/cluster/ansible/roles/common/templates/etc/opt/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hbase/conf/hbase-site.xml.j2
@@ -65,4 +65,9 @@
     <name>hbase.bucketcache.size</name>
     <value>1024</value>
   </property>
+  <!-- Phoenix related settings-->
+  <property>
+    <name>phoenix.schema.isNamespaceMappingEnabled</name>
+    <value>true</value>
+  </property>  
 </configuration>
