--- a/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/ssl-server.xml.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/ssl-server.xml.j2
@@ -20,7 +20,7 @@
 
 <property>
   <name>ssl.server.truststore.location</name>
-  <value>/etc/opt/hadoop/conf/truststore.jks</value>
+  <value>{{ HADOOP_CONFIG }}/truststore.jks</value>
   <description>Truststore to be used by NN and DN. Must be specified.
   </description>
 </property>
@@ -49,7 +49,7 @@
 
 <property>
   <name>ssl.server.keystore.location</name>
-  <value>/etc/opt/hadoop/conf/keystore.jks</value>
+  <value>{{ HADOOP_CONFIG }}/{{ inventory_hostname }}-hdfs.jks</value>
   <description>Keystore to be used by NN and DN. Must be specified.
   </description>
 </property>
