--- a/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/yarn-env.sh.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/yarn-env.sh.j2
@@ -25,15 +25,14 @@ if [ "$JAVA_HOME" != "" ]; then
   #echo "run java in $JAVA_HOME"
   JAVA_HOME=$JAVA_HOME
 fi
-export JAVA_LIBRARY_PATH=/usr/local/lib
-  
+
 if [ "$JAVA_HOME" = "" ]; then
   echo "Error: JAVA_HOME is not set."
   exit 1
 fi
 
 JAVA=$JAVA_HOME/bin/java
-JAVA_HEAP_MAX=-Xmx1000m 
+JAVA_HEAP_MAX=-Xmx1000m
 
 # For setting YARN specific HEAP sizes please use this
 # Parameter and set appropriately
@@ -88,7 +87,6 @@ fi
 # so that filenames w/ spaces are handled correctly in loops below
 IFS=
 
-export YARN_LOG_DIR={{ VAR_RUN_BASE }}/hadoop/logs/$USER
 
 # default log directory & file
 if [ "$YARN_LOG_DIR" = "" ]; then
@@ -117,7 +115,9 @@ YARN_OPTS="$YARN_OPTS -Dhadoop.root.logger=${YARN_ROOT_LOGGER:-INFO,console}"
 YARN_OPTS="$YARN_OPTS -Dyarn.root.logger=${YARN_ROOT_LOGGER:-INFO,console}"
 if [ "x$JAVA_LIBRARY_PATH" != "x" ]; then
   YARN_OPTS="$YARN_OPTS -Djava.library.path=$JAVA_LIBRARY_PATH"
-fi  
+fi
 YARN_OPTS="$YARN_OPTS -Dyarn.policy.file=$YARN_POLICYFILE"
+
+export YARN_LOG_DIR={{ LOG_DIR }}
 
 
