--- a/cluster/ansible/roles/common/templates/etc/opt/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hbase/conf/hbase-site.xml.j2
@@ -69,5 +69,35 @@
   <property>
     <name>phoenix.schema.isNamespaceMappingEnabled</name>
     <value>true</value>
-  </property>  
+  </property>
+  {%- if SECURITY_ENABLED -%}
+  <property>
+    <name>hbase.regionserver.kerberos.principal</name>
+    <value>hbase/{{ inventory_hostname }}@{{ KRB_REALM }}</value>
+  </property>
+  <property>
+    <name>hbase.regionserver.keytab.file</name>
+    <value>{{ HADOOP_CONFIG }}/hbase.krb5</value>
+  </property>
+  <property>
+    <name>hbase.master.kerberos.principal</name>
+    <value>hbase/{{ inventory_hostname }}@{{ KRB_REALM }}</value>
+  </property>
+  <property>
+    <name>hbase.master.keytab.file</name>
+    <value>{{ HADOOP_CONFIG }}/hbase.krb5</value>
+  </property>
+  <property>
+    <name>hbase.security.authentication</name>
+    <value>kerberos</value>
+  </property>
+  <property>
+    <name>hbase.security.authorization</name>
+    <value>true</value>
+  </property>
+  <property>
+    <name>hbase.coprocessor.region.classes</name>
+    <value>org.apache.hadoop.hbase.security.token.TokenProvider</value>
+  </property>
+  {% endif %}
 </configuration>
