--- a/cluster/ansible/roles/common/templates/etc/opt/zookeeper/conf/jaas.conf.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/zookeeper/conf/jaas.conf.j2
@@ -1,7 +1,7 @@
 Server {
   com.sun.security.auth.module.Krb5LoginModule required
   useKeyTab=true
-  keyTab="{{ CONFIG_BASE }}/zookeeper/conf/zookeeper.keytab"
+  keyTab="{{ CONFIG_BASE }}/hadoop/zookeeper.keytab"
   storeKey=true
   useTicketCache=false
   principal="zookeeper/{{ inventory_hostname }}@{{ KRB_REALM }}";
