--- a/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/hadoop-env.sh.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/hadoop-env.sh.j2
@@ -22,9 +22,7 @@
 # remote nodes.
 
 # The java implementation to use.
-#export JAVA_HOME=${JAVA_HOME}
-export JAVA_HOME={{ JAVA_HOME }}
-export JAVA_LIBRARY_PATH=/usr/local/lib
+export JAVA_HOME=${JAVA_HOME}
 
 # The jsvc implementation to use. Jsvc is required to run secure datanodes
 # that bind to privileged ports to provide authentication of data transfer
@@ -32,7 +30,7 @@ export JAVA_LIBRARY_PATH=/usr/local/lib
 # data transfer protocol using non-privileged ports.
 #export JSVC_HOME=${JSVC_HOME}
 
-export HADOOP_CONF_DIR=${HADOOP_CONF_DIR:-"{{ CONFIG_BASE }}/hadoop"}
+export HADOOP_CONF_DIR=${HADOOP_CONF_DIR:-"/etc/hadoop"}
 
 # Extra Java CLASSPATH elements.  Automatically insert capacity-scheduler.
 for f in $HADOOP_HOME/contrib/capacity-scheduler/*.jar; do
@@ -68,11 +66,10 @@ export HADOOP_CLIENT_OPTS="-Xmx512m $HADOOP_CLIENT_OPTS"
 # to provide authentication of data transfer protocol.  This **MUST NOT** be
 # defined if SASL is configured for authentication of data transfer protocol
 # using non-privileged ports.
-# export HADOOP_SECURE_DN_USER=${HADOOP_SECURE_DN_USER}
+export HADOOP_SECURE_DN_USER=${HADOOP_SECURE_DN_USER}
 
 # Where log files are stored.  $HADOOP_HOME/logs by default.
 #export HADOOP_LOG_DIR=${HADOOP_LOG_DIR}/$USER
-export HADOOP_LOG_DIR={{ VAR_RUN_BASE }}/hadoop/logs/$USER
 
 # Where log files are stored in the secure data environment.
 export HADOOP_SECURE_DN_LOG_DIR=${HADOOP_LOG_DIR}/${HADOOP_HDFS_USER}
@@ -91,12 +88,21 @@ export HADOOP_SECURE_DN_LOG_DIR=${HADOOP_LOG_DIR}/${HADOOP_HDFS_USER}
 ###
 
 # The directory where pid files are stored. /tmp by default.
-# NOTE: this should be set to a directory that can only be written to by 
+# NOTE: this should be set to a directory that can only be written to by
 #       the user that will run the hadoop daemons.  Otherwise there is the
 #       potential for a symlink attack.
-#export HADOOP_PID_DIR=${HADOOP_PID_DIR}
-export HADOOP_PID_DIR={{ VAR_RUN_BASE }}/hadoop/run
+export HADOOP_PID_DIR=${HADOOP_PID_DIR}
 export HADOOP_SECURE_DN_PID_DIR=${HADOOP_PID_DIR}
 
 # A string representing this instance of hadoop. $USER by default.
 export HADOOP_IDENT_STRING=$USER
+
+
+export HADOOP_CONF_DIR={{ HADOOP_CONFIG }}
+export HADOOP_PID_DIR={{ PID_DIR }}
+export HADOOP_LOG_DIR={{ LOG_DIR }}
+export HADOOP_COMMON_HOME={{ HADOOP_HOME }}
+export HADOOP_HDFS_HOME={{ HADOOP_HOME }}
+export HADOOP_YARN_HOME={{ HADOOP_HOME }}
+export HADOOP_MAPRED_HOME={{ HADOOP_HOME }}
+export JAVA_HOME={{ JAVA_HOME }}
