--- a/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/yarn-site.xml.j2
+++ b/cluster/ansible/roles/common/templates/etc/opt/hadoop/conf/yarn-site.xml.j2
@@ -14,80 +14,55 @@
 -->
 <configuration>
   <property>
-    <name>yarn.resourcemanager.hostname</name>
-    <value>master-1.internal.larsgeorge.com</value>
+    <name>yarn.nodemanager.local-dirs</name>
+    <value>file:///{{ HADOOP_DATA }}/nm/data</value>
   </property>
+  <property>
+    <name>yarn.nodemanager.log-dirs</name>
+    <value>file:///{{ HADOOP_DATA }}/nm/logs</value>
+  </property>
+
+  <property>
+    <name>yarn.log-aggregation-enable</name>
+    <value>true</value>
+  </property>
+
+  <property>
+    <name>yarn.nodemanager.aux-services</name>
+    <value>mapreduce_shuffle</value>
+  </property>
+
+  <property>
+    <name>yarn.resourcemanager.hostname</name>
+    <value>{{ groups.masters[0] }}.{{ CLUSTER_DOMAIN }}</value>
+  </property>
+  <property>
+    <name>yarn.resourcemanager.bind-host</name>
+    <value>0.0.0.0</value>
+  </property>
+
   <property>
     <name>yarn.nodemanager.resource.memory-mb</name>
-    <value>2048</value>
-    <description>Physical memory, in MB, to be made available to running containers</description>
+    <value>4096</value>
   </property>
   <property>
-    <name>yarn.scheduler.minimum-allocation-mb</name>
-    <value>128</value>
-    <description>Minimum limit of memory to allocate to each container request at the Resource Manager.</description>
+    <name>yarn.nodemanager.resource.cpu-vcores</name>
+    <value>2</value>
   </property>
   <property>
-     <name>yarn.scheduler.maximum-allocation-mb</name>
-     <value>1024</value>
-     <description>Maximum limit of memory to allocate to each container request at the Resource Manager.</description>
-  </property>
-  <property>
-    <name>yarn.scheduler.minimum-allocation-vcores</name>
-    <value>1</value>
+    <name>yarn.scheduler.maximum-allocation-mb</name>
+    <value>4096</value>
   </property>
   <property>
     <name>yarn.scheduler.maximum-allocation-vcores</name>
     <value>2</value>
   </property>
+
   <property>
-    <name>yarn.nodemanager.resource.cpu-vcores</name>
-    <value>1</value>
-    <description>Number of CPU cores that can be allocated for containers.</description>
+    <name>yarn.resourcemanager.scheduler.class</name>
+    <value>org.apache.hadoop.yarn.server.resourcemanager.scheduler.fair.FairScheduler</value>
   </property>
-  <property>
-    <name>yarn.nodemanager.aux-services</name>
-    <value>mapreduce_shuffle</value>
-  </property>
-  <property>
-    <name>yarn.nodemanager.aux-services.mapreduce_shuffle.class</name>
-    <value>org.apache.hadoop.mapred.ShuffleHandler</value>
-  </property>
-  <property>
-    <name>yarn.log-aggregation-enable</name>
-    <value>true</value>
-  </property>
-  <property>
-    <name>yarn.dispatcher.exit-on-error</name>
-    <value>true</value>
-  </property>
-  <property>
-    <description>List of directories to store localized files in.</description>
-    <name>yarn.nodemanager.local-dirs</name>
-    <value>{{ VAR_RUN_BASE }}/hadoop/cache/${user.name}/nm-local-dir</value>
-  </property>
-  <property>
-    <description>Where to store container logs.</description>
-    <name>yarn.nodemanager.log-dirs</name>
-    <value>{{ VAR_RUN_BASE }}/hadoop/logs/yarn/containers</value>
-  </property>
-  <property>
-    <description>Where to aggregate logs to.</description>
-    <name>yarn.nodemanager.remote-app-log-dir</name>
-    <value>{{ VAR_RUN_BASE }}/hadoop/logs/yarn/apps</value>
-  </property>
-  <property>
-    <description>Classpath for typical applications.</description>
-     <name>OFF-yarn.application.classpath</name>
-     <value>
-        $HADOOP_CONF_DIR,
-        $HADOOP_COMMON_HOME/*,$HADOOP_COMMON_HOME/lib/*,
-        $HADOOP_HDFS_HOME/*,$HADOOP_HDFS_HOME/lib/*,
-        $HADOOP_MAPRED_HOME/*,$HADOOP_MAPRED_HOME/lib/*,
-        $HADOOP_YARN_HOME/*,$HADOOP_YARN_HOME/lib/*
-     </value>
-  </property>
-  {%- if KERBEROS_ENABLED -%}
+  {%- if SECURITY_ENABLED -%}
   <property>
     <name>yarn.resourcemanager.principal</name>
     <value>yarn/_HOST@{{ KRB_REALM }}</value>
@@ -98,11 +73,11 @@
   </property>
   <property>
     <name>yarn.resourcemanager.keytab</name>
-    <value>yarn.keytab</value>
+    <value>{{ HADOOP_CONFIG }}/yarn.keytab</value>
   </property>
   <property>
     <name>yarn.resourcemanager.webapp.spnego-keytab-file</name>
-    <value>yarn.keytab</value>
+    <value>{{ HADOOP_CONFIG }}/yarn.keytab</value>
   </property>
   <property>
     <name>yarn.nodemanager.principal</name>
@@ -114,11 +89,11 @@
   </property>
   <property>
     <name>yarn.nodemanager.keytab</name>
-    <value>yarn.keytab</value>
+    <value>{{ HADOOP_CONFIG }}/yarn.keytab</value>
   </property>
   <property>
     <name>yarn.nodemanager.webapp.spnego-keytab-file</name>
-    <value>yarn.keytab</value>
+    <value>{{ HADOOP_CONFIG }}/yarn.keytab</value>
   </property>
   <property>
     <name>yarn.nodemanager.container-executor.class</name> 
