--- a/cluster/ansible/roles/hadoop/templates/etc/systemd/system/nodemanager.service.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/systemd/system/nodemanager.service.j2
@@ -4,7 +4,7 @@ Before=
 After=network.target
 
 [Service]
-User=hadoop
+User=root
 ExecStart={{ HADOOP_HOME }}/bin/yarn nodemanager
 ExecStop=/bin/kill $MAINPID
 Restart=on-abort
