--- a/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-env.sh.j2
+++ b/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-env.sh.j2
@@ -25,6 +25,12 @@
 # so try to keep things idempotent unless you want to take an even deeper look
 # into the startup scripts (bin/hbase, etc.)
 
+{%- if SECURITY_ENABLED -%}
+export HBASE_OPTS="-Djava.security.auth.login.config={{ HBASE_CONFIG}}/zk-jaas.conf"
+export HBASE_MASTER_OPTS="-Djava.security.auth.login.config={{ HBASE_CONFIG}}/zk-jaas.conf"
+export HBASE_REGIONSERVER_OPTS="-Djava.security.auth.login.config={{ HBASE_CONFIG}}/hbase.jaas"
+{% endif %}
+
 # The java implementation to use.  Java 1.7+ required.
 # export JAVA_HOME=/usr/java/jdk1.6.0/
 export JAVA_HOME=/etc/alternatives/jre
@@ -145,3 +151,6 @@ export HBASE_MANAGES_ZK=false
 # HBASE_ROOT_LOGGER=INFO,DRFA
 # The reason for changing default to RFA is to avoid the boundary case of filling out disk space as 
 # DRFA doesn't put any cap on the log size. Please refer to HBase-5655 for more context.
+
+
+
