--- a/cluster/ansible/roles/hbase/templates/etc/systemd/system/hbase.service.j2
+++ b/cluster/ansible/roles/hbase/templates/etc/systemd/system/hbase.service.j2
@@ -4,7 +4,7 @@ Before=
 After=network.target
 
 [Service]
-User=hadoop
+User=hbase
 ExecStart={{ HBASE_HOME }}/bin/hbase {% if HBASE_MODE == "slave" %}regionserver{% else %}master{% endif %} start{% if HBASE_MODE == "backup" %} -backup{% endif %}
 
 ExecStop=/bin/kill $MAINPID
