--- a/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/container-executor.cfg.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/container-executor.cfg.j2
@@ -1,4 +1,4 @@
-yarn.nodemanager.linux-container-executor.group=yarn
+yarn.nodemanager.linux-container-executor.group=hadoop
 min.user.id=500
 allowed.system.users=nobody,impala,hive,llama
 banned.users=root,hdfs,yarn,mapred,bin
