Updated service scripts to use correct user in secure/non secure mode.
Added hdfs formatting at first run.

Small fixes..

--- a/cluster/ansible/roles/hadoop/templates/etc/systemd/system/historyserver.service.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/systemd/system/historyserver.service.j2
@@ -4,7 +4,8 @@ Before=
 After=network.target
 
 [Service]
-User=hadoop
+User={% if SECURITY_ENABLED %}hdfs{% else %}hadoop{% endif %}
+
 ExecStart={{ HADOOP_HOME }}/bin/mapred historyserver
 ExecStop=/bin/kill $MAINPID
 Restart=on-abort
