--- a/cluster/ansible/roles/hadoop/templates/etc/systemd/system/datanode.service.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/systemd/system/datanode.service.j2
@@ -4,7 +4,8 @@ Before=
 After=network.target
 
 [Service]
-User=hdfs
+User={% if SECURITY_ENABLED %}hdfs{% else %}hadoop{% endif %}
+
 ExecStart={{ HADOOP_HOME }}/bin/hdfs datanode
 ExecStop=/bin/kill $MAINPID
 Restart=on-abort
