--- a/cluster/ansible/roles/hadoop/templates/etc/systemd/system/resourcemanager.service.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/systemd/system/resourcemanager.service.j2
@@ -4,7 +4,8 @@ Before=
 After=network.target
 
 [Service]
-User=hadoop
+User={% if SECURITY_ENABLED %}hdfs{% else %}hadoop{% endif %}
+
 ExecStart={{ HADOOP_HOME }}/bin/yarn resourcemanager
 ExecStop=/bin/kill $MAINPID
 Restart=on-abort
