--- a/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-site.xml.j2
@@ -35,7 +35,7 @@
   </property>
   <property>
     <name>hbase.tmp.dir</name>
-    <value>/data/tmp/hbase-${user.name}</value>
+    <value>{{ HBASE_TEMP }}/hbase-${user.name}</value>
   </property>
   <property>
     <name>OFF-hbase.hlog.split.skip.errors</name>
