FIx security and template issues
- Fixes HDFS client setting
- Fixes linewrapping issues

--- a/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-env.sh.j2
+++ b/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-env.sh.j2
@@ -145,10 +145,10 @@ export HBASE_MANAGES_ZK=false
 # The reason for changing default to RFA is to avoid the boundary case of filling out disk space as 
 # DRFA doesn't put any cap on the log size. Please refer to HBase-5655 for more context.
 
-{%- if SECURITY_ENABLED -%}
+{% if SECURITY_ENABLED -%}
 export HBASE_OPTS="$HBASE_OPTS -Djava.security.auth.login.config={{ HBASE_CONFIG }}/hbase-jaas.conf"
 export HBASE_MASTER_OPTS="$HBASE_MASTER_OPTS -Djava.security.auth.login.config={{ HBASE_CONFIG }}/hbase-jaas.conf"
 export HBASE_REGIONSERVER_OPTS="$HBASE_REGIONSERVER_OPTS -Djava.security.auth.login.config={{ HBASE_CONFIG }}/hbase-jaas.conf"
-{% endif %}
+{%- endif %}
 
 
