--- a/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/hdfs-site.xml.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/hdfs-site.xml.j2
@@ -14,8 +14,6 @@
   limitations under the License. See accompanying LICENSE file.
 -->
 
-<!-- Put site-specific property overrides in this file. -->
-
 <configuration>
   <property>
     <name>dfs.namenode.name.dir</name>
@@ -29,7 +27,8 @@
     <name>dfs.namenode.heartbeat.recheck-interval</name>
     <value>15000</value>
   </property>
-  {%- if SECURITY_ENABLED -%}
+  {%- if SECURITY_ENABLED %}
+  <!-- security related properties -->
   <property>
     <name>dfs.block.access.token.enable</name>
     <value>true</value>
@@ -79,9 +78,9 @@
     <value>0.0.0.0:50075</value>
   </property>
   <property>
-      <name>dfs.data.transfer.protection</name>
-      <value>privacy</value>
-    </property>
+    <name>dfs.data.transfer.protection</name>
+    <value>privacy</value>
+  </property>
   <property>
     <name>dfs.http.policy</name>
     <value>HTTPS_ONLY</value>
@@ -107,8 +106,9 @@
     <value>HTTPS_ONLY</value>
   </property>
   <property>
+    <!-- enables service-level-authentication on RPC layer -->
     <name>hadoop.security.authorization</name>
-    <value>true</value>
+    <value>false</value>
   </property>
-  {%- endif -%}
+  {% endif -%}
 </configuration>
