--- a/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-site.xml.j2
@@ -20,6 +20,7 @@
  * limitations under the License.
  */
 -->
+
 <configuration>
   <property>
     <name>hbase.rootdir</name>
@@ -46,10 +47,6 @@
     <value>true</value>
   </property>
   <property>
-    <name>OFF-hbase.coprocessor.user.region.classes</name>
-    <value>coprocessor.DuplicateRegionObserverExample,coprocessor.DuplicateRegionObserverExample</value>
-  </property>
-  <property>
     <name>hbase.bucketcache.combinedcache.enabled</name>
     <value>true</value>
   </property>
@@ -70,38 +67,49 @@
     <name>phoenix.schema.isNamespaceMappingEnabled</name>
     <value>true</value>
   </property>
-   {%- if SECURITY_ENABLED -%}
-    <property>
-      <name>hbase.regionserver.kerberos.principal</name>
-      <value>hbase/_HOST@{{ KRB_REALM }}</value>
-    </property>
-    <property>
-      <name>hbase.regionserver.keytab.file</name>
-      <value>{{ KEYTAB_DIR }}/hbase.keytab</value>
-    </property>
-    <property>
-      <name>hbase.master.kerberos.principal</name>
-      <value>hbase/_HOST@{{ KRB_REALM }}</value>
-    </property>
-    <property>
-      <name>hbase.master.keytab.file</name>
-      <value>{{ KEYTAB_DIR }}/hbase.keytab</value>
-    </property>
-    <property>
-      <name>hbase.security.authentication</name>
-      <value>kerberos</value>
-    </property>
-    <property>
-      <name>hbase.security.authorization</name>
-      <value>true</value>
-    </property>
-    <property>
-      <name>hbase.coprocessor.region.classes</name>
-      <value>org.apache.hadoop.hbase.security.token.TokenProvider</value>
-    </property>
-    <property>
-      <name>hbase.zookeeper.property.authProvider.1</name>
-      <value>org.apache.zookeeper.server.auth.SASLAuthenticationProvider</value>
-    </property>
-    {% endif %}
+  {%- if SECURITY_ENABLED %}
+  <property>
+    <name>hbase.regionserver.kerberos.principal</name>
+    <value>hbase/_HOST@{{ KRB_REALM }}</value>
+  </property>
+  <property>
+    <name>hbase.regionserver.keytab.file</name>
+    <value>{{ KEYTAB_DIR }}/hbase.keytab</value>
+  </property>
+  <property>
+    <name>hbase.master.kerberos.principal</name>
+    <value>hbase/_HOST@{{ KRB_REALM }}</value>
+  </property>
+  <property>
+    <name>hbase.master.keytab.file</name>
+    <value>{{ KEYTAB_DIR }}/hbase.keytab</value>
+  </property>
+  <property>
+    <name>hbase.security.authentication</name>
+    <value>kerberos</value>
+  </property>
+  <property>
+    <!-- enables HDFS client authz -->
+    <name>hadoop.security.authentication</name>
+    <value>kerberos</value>
+  </property>
+  <property>
+    <!-- enables HBase ACLs -->
+    <name>hbase.security.authorization</name>
+    <value>true</value>
+  </property>
+  <property>
+    <name>hbase.coprocessor.region.classes</name>
+    <value>org.apache.hadoop.hbase.security.token.TokenProvider</value>
+  </property>
+  <property>
+    <name>hbase.zookeeper.property.authProvider.1</name>
+    <value>org.apache.zookeeper.server.auth.SASLAuthenticationProvider</value>
+  </property>
+  <property>
+    <!-- enables service-level-authentication on RPC layer -->
+    <name>hadoop.security.authorization</name>
+    <value>false</value>
+  </property>
+  {% endif -%}
 </configuration>
