Changes to security config for Hadoop

--- a/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/core-site.xml.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/core-site.xml.j2
@@ -25,10 +25,16 @@
     <name>hadoop.tmp.dir</name>
     <value>{{ TMP_DIR }}/hadoop-${user.name}</value>
   </property>
-  {%- if SECURITY_ENABLED -%}
+  {%- if SECURITY_ENABLED %}
+  <!-- security related properties -->
   <property>
     <name>hadoop.security.authentication</name>
     <value>kerberos</value>
   </property>
-  {%- endif -%}
+  <property>
+    <!-- enables service-level-authentication on RPC layer -->
+    <name>hadoop.security.authorization</name>
+    <value>false</value>
+  </property>
+  {% endif -%}
 </configuration>
