--- a/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/hdfs-site.xml.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/hdfs-site.xml.j2
@@ -78,7 +78,7 @@
     <value>0.0.0.0:50075</value>
   </property>
   <property>
-    <name>dfs.data.transfer.protection</name>
+    <name>OFF-dfs.data.transfer.protection</name>
     <value>privacy</value>
   </property>
   <property>
@@ -104,11 +104,6 @@
   <property>
     <name>dfs.http.policy</name>
     <value>HTTPS_ONLY</value>
-  </property>
-  <property>
-    <!-- enables service-level-authentication on RPC layer -->
-    <name>hadoop.security.authorization</name>
-    <value>false</value>
   </property>
   {% endif -%}
 </configuration>
