More changes to get HBase to work

--- a/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/core-site.xml.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/hadoop/conf/core-site.xml.j2
@@ -32,6 +32,10 @@
     <value>kerberos</value>
   </property>
   <property>
+    <name>hadoop.rpc.protection</name>
+    <value>privacy</value>
+  </property>
+  <property>
     <!-- enables service-level-authentication on RPC layer -->
     <name>hadoop.security.authorization</name>
     <value>false</value>
